kubernetes/apps/ghostfolio/ghostfolio/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
spec:
  selector:
    app: ghostfolio
  ports:
    - port: 3333
      targetPort: 3333
      name: http
