kubernetes/apps/ghostfolio/ghostfolio/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghostfolio
spec:
  hostnames:
    - "ghostfolio.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: ghostfolio
          port: 3333
